# VelyraAppFramework

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/VelyraAppFramework/: AppData.hpp  AppInclude.hpp  Application.hpp  Layer.hpp  Settings.hpp  Styles.hpp
include/VelyraAppFramework/LayoutEngine/: Layout.hpp  LayoutDefinitions.hpp  LayoutDescription.hpp  LayoutEngine.hpp  LayoutNode.hpp
include/VelyraAppFramework/Widgets/: Panel.hpp  Popup.hpp  RegexInput.hpp  Terminal.hpp
src/: Pch.hpp
src/VelyraAppFramework/: AppData.cpp  AppInclude.cpp  Application.cpp  LoggerNames.hpp  Settings.cpp
src/VelyraAppFramework/LayoutEngine/: LayoutDescription.cpp  LayoutEngine.cpp  LayoutNode.cpp  LayoutNode.hpp
src/VelyraAppFramework/Widgets/: Panel.cpp  Popup.cpp  RegexInput.cpp  Terminal.cpp
test/: TestLayoutDescription.cpp  TestLayoutEngine.cpp  TestSettings.cpp  somefile.cpp
